--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -4,7 +4,6 @@ import PostCard from '@/components/post-card.astro';
 import PostCode from '@/components/post-code.astro';
 import PostGithub from '@/components/post-github.astro';
 import PostSubheader from '@/components/post-subheader.astro';
-import PostViews from '@/components/post-views.astro';
 import Link from '@/components/ui/link.astro';
 import Moment from '@/components/ui/moment.astro';
 import Separator from '@/components/ui/separator.astro';
@@ -12,7 +11,7 @@ import Layout from '@/layouts/layout.astro';
 import type { GetStaticPaths } from 'astro';
 import { Image } from 'astro:assets';
 import { getCollection, type CollectionEntry } from 'astro:content';
-import { Calendar, Clock4, Github, Linkedin, Mail, Rss, Twitter } from 'lucide-astro';
+import { Calendar, Clock4, Eye, Github, Linkedin, Mail, Rss, Twitter } from 'lucide-astro';
 
 export const getStaticPaths: GetStaticPaths = async () =>
   getCollection('posts').then((posts) =>
@@ -50,7 +49,13 @@ const { remarkPluginFrontmatter: extras, headings, Content } = await post.render
             <Clock4 class="shrink-0" size={14} aria-hidden />
             <span data-pagefind-meta="readingTime">{extras.readingTime} Min Read</span>
           </div>
-          <PostViews slug={post.slug} />
+          <div
+            x-data={`{ views: $fetch("/blog/api", ${JSON.stringify({ method: 'PUT', body: { slug: post.slug } })})}`}
+            class="flex items-center gap-2 rounded border bg-2 px-2 tracking-wider"
+          >
+            <Eye class="shrink-0" size={14} aria-hidden />
+            <span x-text="(await views)?.toString().padStart(6, '0')">000000</span>
+          </div>
         </div>
       </div>
       <Separator class="mb-4 mt-6 xl:mb-10" />
