--- a/src/components/ui/clipboard.astro
+++ b/src/components/ui/clipboard.astro
@@ -3,16 +3,17 @@ import type { HTMLAttributes } from 'astro/types';
 import { Check, Clipboard as ClipboardIcon } from 'lucide-astro';
 import { twMerge } from 'tailwind-merge';
 
-type Props = HTMLAttributes<'button'> & { content?: string };
+type Props = HTMLAttributes<'button'> & { content?: string; target?: string };
 
-const { class: className, 'aria-label': ariaLabel, content, ...props } = Astro.props;
+const { class: className, 'aria-label': ariaLabel, content, target, ...props } = Astro.props;
 ---
 
 <button
   {...props}
-  data-copied="false"
-  data-content={content}
+  x-data="{ copied: false }"
   aria-label={ariaLabel ?? 'Copy to clipboard'}
+  @click={`navigator.clipboard.writeText(${target} ? ${target}?.textContent?.trim() : "${content}").then(() => copied = true)`}
+  @mouseleave.debounce.1000ms="copied && (copied = false)"
   class={twMerge(
     'group flex select-none items-center gap-2 rounded hover:text-emphasis',
     'focus-visible:outline-none focus-visible:ring-2 motion-safe:transition-colors',
@@ -20,26 +21,6 @@ const { class: className, 'aria-label': ariaLabel, content, ...props } = Astro.p
   )}
 >
   <slot />
-  <ClipboardIcon size={14} aria-hidden class="group-data-[copied=true]:hidden" />
-  <Check size={14} aria-hidden class="group-data-[copied=false]:hidden" />
+  <ClipboardIcon size={14} aria-hidden x-show="!copied" />
+  <Check size={14} aria-hidden x-show="copied" />
 </button>
-
-<script>
-  document.addEventListener('astro:page-load', () => {
-    const targets: NodeListOf<HTMLButtonElement> = document.querySelectorAll('button[data-copied]');
-
-    targets.forEach((target) => {
-      target.addEventListener('click', () => {
-        target.dataset.copied = 'true';
-        setTimeout(() => (target.dataset.copied = 'false'), 1000);
-
-        if (target.dataset.content) navigator.clipboard.writeText(target.dataset.content);
-        else {
-          const wrapper = target.closest('[data-clipboard-wrapper]');
-          const content = wrapper?.querySelector('[data-clipboard-content]')?.textContent?.trim();
-          if (content) navigator.clipboard.writeText(content);
-        }
-      });
-    });
-  });
-</script>
