--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -5,7 +5,6 @@ import PostCode from '@/components/post-code.astro';
 import PostGithub from '@/components/post-github.astro';
 import PostSubheader from '@/components/post-subheader.astro';
 import Link from '@/components/ui/link.astro';
-import Moment from '@/components/ui/moment.astro';
 import Separator from '@/components/ui/separator.astro';
 import Layout from '@/layouts/layout.astro';
 import type { GetStaticPaths } from 'astro';
@@ -16,7 +15,7 @@ import { Calendar, Clock4, Eye, Github, Linkedin, Mail, Rss, Twitter } from 'luc
 export const getStaticPaths: GetStaticPaths = async () =>
   getCollection('posts').then((posts) =>
     posts
-      .sort((a, b) => b.data.published.valueOf() - a.data.published.valueOf())
+      .sort((a, b) => b.data.published.date.valueOf() - a.data.published.date.valueOf())
       .map((post, index, _posts) => {
         const prev = _posts[index + 1] ?? _posts[0];
         const next = _posts[index - 1] ?? _posts[_posts.length - 1];
@@ -38,12 +37,14 @@ const { remarkPluginFrontmatter: extras, headings, Content } = await post.render
 >
   <div class="mx-auto mt-fluid-5 max-w-screen-lg xl:grid xl:grid-cols-[1fr,17rem] xl:gap-16">
     <article data-pagefind-body class="mx-auto max-w-prose">
-      <div class="flex flex-col gap-3" data-pagefind-meta={`description:${post.data.description}`}>
+      <div class="flex flex-col gap-3" data-pagefind-meta={`slug:${post.slug}`}>
         <h1 class="text-lg font-bold uppercase tracking-widest">{post.data.title}</h1>
         <div class="flex flex-wrap items-center gap-4 text-xxs text-2">
           <div class="flex items-center gap-2 rounded border bg-2 px-2">
             <Calendar class="shrink-0" size={14} aria-hidden />
-            <Moment data-pagefind-meta="published">{post.data.published}</Moment>
+            <time data-pagefind-meta="published" datetime={post.data.published.iso}>
+              {post.data.published.pretty}
+            </time>
           </div>
           <div class="flex items-center gap-2 rounded border bg-2 px-2">
             <Clock4 class="shrink-0" size={14} aria-hidden />
