--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -6,22 +6,23 @@ import Separator from '@/components/ui/separator.astro';
 import Textfield from '@/components/ui/textfield.astro';
 import Layout from '@/layouts/layout.astro';
 import { getCollection } from 'astro:content';
+import { PostView, db, sum } from 'astro:db';
 import { Dot, Search } from 'lucide-astro';
 import { twJoin } from 'tailwind-merge';
-import { GET as getTotalViews } from './api';
 
 const posts = await Promise.all(
   (await getCollection('posts'))
     .sort((a, b) => b.data.published.date.valueOf() - a.data.published.date.valueOf())
     .map(async (post) => {
       const { readingTime } = (await post.render()).remarkPluginFrontmatter;
-      return { ...post, data: { ...post.data, readingTime } };
+      const line = { title: post.data.title, published: post.data.published, slug: post.slug, readingTime };
+      return { ...post, line };
     }),
 );
-
 const topics = [...new Set(posts.flatMap((post) => post.data.topics))].sort();
-// @ts-ignore
-const totalViews = await getTotalViews(Astro).then((res) => res.text());
+
+const [rs] = await db.select({ views: sum(PostView.views) }).from(PostView);
+const views = Intl.NumberFormat('en', { notation: 'compact', maximumFractionDigits: 1 }).format(Number(rs?.views ?? 0));
 ---
 
 <Layout title="Blog | Christian Penrod">
@@ -33,54 +34,52 @@ const totalViews = await getTotalViews(Astro).then((res) => res.text());
     <Separator class="mb-8 mt-4 lg:mb-12" />
     <div class="grid gap-20 lg:grid-cols-[1fr_30%]">
       <section
-        x-data={`searchPosts(${JSON.stringify(posts.map((post) => ({ data: post.data, slug: post.slug })))})`}
+        x-data={`pagefind(${JSON.stringify(posts.map((post) => post.line))}, "slug")`}
         class="flex flex-col gap-6"
       >
         <div class="flex items-center gap-4">
           <h2 class="font-bold leading-none tracking-wider text-2">ALL POSTS</h2>
           <Separator class="flex-1" />
           <div class="flex items-center text-xxs text-2">
-            <span>{totalViews} Views</span>
+            <span>{views} Views</span>
             <Dot class="shrink-0" size={14} aria-hidden />
             <span>{posts.length} Posts</span>
           </div>
         </div>
-        <div class="flex flex-col gap-4 rounded border bg-2/30 p-4">
-          <Textfield placeholder="Search Posts" class="text-xs" @keyup.debounce.200ms="search($el.value)">
+        <div class="flex flex-col gap-4 rounded border bg-2/30 p-4 text-xs">
+          <Textfield placeholder="Search Posts" aria-label="Search Posts" x-model.debounce.200ms="query">
             <Search slot="prefix" size={12} aria-hidden />
             <Command slot="suffix" key="/" @keyup.window.slash="$el.parentElement.previousElementSibling.focus()" />
           </Textfield>
           <!-- prettier-ignore -->
-          <ul class="flex flex-wrap gap-2">
-            {topics.map((value) => <li><Chip aria-label={`${value}`} x-on:click={`filter("${value}")`}>{value}</Chip></li>)}
+          <ul class="flex flex-wrap gap-2">{topics.map((value) => (<li><Chip {value} x-model="tags" /></li>))}
           </ul>
         </div>
         <div>
-          <ul class="flex flex-col">
-            <template x-for="post in posts">
+          <template x-for="post in results">
+            <ul class="flex flex-col">
               <li>
                 <a
                   :href="'/blog/' + post.slug"
-                  :aria-label="post.data.title"
+                  :aria-label="post.title"
                   class={twJoin(
-                    'group flex flex-col rounded py-2 text-xs',
-                    'sm:flex-row sm:items-center sm:justify-between sm:gap-2',
+                    'group flex flex-col rounded py-2 text-xs sm:flex-row sm:items-center sm:justify-between sm:gap-2',
                     'focus-visible:outline-none focus-visible:ring-1',
                   )}
                 >
-                  <span x-text="post.data.title" class="group-hover:text-emphasis motion-safe:transition-colors"></span>
+                  <span x-text="post.title" class="group-hover:text-emphasis motion-safe:transition-colors"></span>
                   <Separator class="flex-1" />
                   <div class="flex items-center text-xxs text-2">
-                    <time :datetime="post.data.published.iso" x-text="post.data.published.pretty"></time>
+                    <time :datetime="post.published.iso" x-text="post.published.pretty"></time>
                     <Dot class="shrink-0" size={14} aria-hidden />
-                    <span x-text="post.data.readingTime"></span>
+                    <span x-text="post.readingTime"></span>
                   </div>
                   <Separator class="mt-4 sm:hidden" />
                 </a>
               </li>
-            </template>
-          </ul>
-          <div x-cloak x-show="!posts.length" class="mt-6 text-center [&[x-cloak]]:hidden">
+            </ul>
+          </template>
+          <div x-show="!results?.length" x-cloak class="mt-6 text-center [&[x-cloak]]:hidden">
             <h2 class="text-base font-bold tracking-wider">No Posts Found</h2>
             <p class="text-xs text-2">No posts matched the search criteria.</p>
           </div>
