--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -50,8 +50,7 @@ const postResults = await Promise.all(
             <Command slot="suffix" key="/" @keyup.window.slash="$el.parentElement.previousElementSibling.focus()" />
           </Textfield>
           <!-- prettier-ignore -->
-          <ul class="flex flex-wrap gap-2">{topics.map((value) => (<li><Chip {value} x-model="tags" /></li>))}
-          </ul>
+          <ul class="flex flex-wrap gap-2">{topics.map((value) => (<li><Chip {value} x-model="tags" /></li>))}</ul>
         </div>
         <div>
           <PostResults results={postResults} />
